--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
-    "firebase": "^9.5.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "reactfire": "^4.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
