cambie el nombre del repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "soychrisjuncal.github.io/tiendaKiwi-FernandezJuncal",
+  "homepage": "soychrisjuncal.github.io/tiendakiwi",
   "name": "tienda-kiwi",
   "version": "0.1.0",
   "private": true,
